Adding roasting method

--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,6 @@
   font-size: 17px;
   color: #aa60c8;
 }
-body {
-  background-color: #330055;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 1000'%3E%3Cg %3E%3Ccircle fill='%23330055' cx='50' cy='0' r='50'/%3E%3Cg fill='%233a015d' %3E%3Ccircle cx='0' cy='50' r='50'/%3E%3Ccircle cx='100' cy='50' r='50'/%3E%3C/g%3E%3Ccircle fill='%23410165' cx='50' cy='100' r='50'/%3E%3Cg fill='%2348026e' %3E%3Ccircle cx='0' cy='150' r='50'/%3E%3Ccircle cx='100' cy='150' r='50'/%3E%3C/g%3E%3Ccircle fill='%23500376' cx='50' cy='200' r='50'/%3E%3Cg fill='%2357047e' %3E%3Ccircle cx='0' cy='250' r='50'/%3E%3Ccircle cx='100' cy='250' r='50'/%3E%3C/g%3E%3Ccircle fill='%235f0587' cx='50' cy='300' r='50'/%3E%3Cg fill='%2367068f' %3E%3Ccircle cx='0' cy='350' r='50'/%3E%3Ccircle cx='100' cy='350' r='50'/%3E%3C/g%3E%3Ccircle fill='%236f0798' cx='50' cy='400' r='50'/%3E%3Cg fill='%237707a0' %3E%3Ccircle cx='0' cy='450' r='50'/%3E%3Ccircle cx='100' cy='450' r='50'/%3E%3C/g%3E%3Ccircle fill='%238008a9' cx='50' cy='500' r='50'/%3E%3Cg fill='%238909b1' %3E%3Ccircle cx='0' cy='550' r='50'/%3E%3Ccircle cx='100' cy='550' r='50'/%3E%3C/g%3E%3Ccircle fill='%239109ba' cx='50' cy='600' r='50'/%3E%3Cg fill='%239a09c3' %3E%3Ccircle cx='0' cy='650' r='50'/%3E%3Ccircle cx='100' cy='650' r='50'/%3E%3C/g%3E%3Ccircle fill='%23a309cb' cx='50' cy='700' r='50'/%3E%3Cg fill='%23ad09d4' %3E%3Ccircle cx='0' cy='750' r='50'/%3E%3Ccircle cx='100' cy='750' r='50'/%3E%3C/g%3E%3Ccircle fill='%23b608dc' cx='50' cy='800' r='50'/%3E%3Cg fill='%23c007e5' %3E%3Ccircle cx='0' cy='850' r='50'/%3E%3Ccircle cx='100' cy='850' r='50'/%3E%3C/g%3E%3Ccircle fill='%23c905ee' cx='50' cy='900' r='50'/%3E%3Cg fill='%23d303f6' %3E%3Ccircle cx='0' cy='950' r='50'/%3E%3Ccircle cx='100' cy='950' r='50'/%3E%3C/g%3E%3Ccircle fill='%23D0F' cx='50' cy='1000' r='50'/%3E%3C/g%3E%3C/svg%3E");
-  background-attachment: fixed;
-  background-size: contain;
-}
 img.icon {
   filter: invert(53%) sepia(16%) saturate(500%) hue-rotate(220deg);
 }
@@ -28,4 +22,194 @@ a:hover {
 }
 .login {
   color: #ffdfef;
+}
+@import "tailwindcss";
+body {
+  background-color: #2e073f;
+  position: relative;
+  overflow-x: hidden;
+  height: 100vh;
+  max-width: 100%;
+}
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
+@keyframes appear {
+  from {
+    opacity: 0;
+    scale: 0.5;
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+  }
+}
+.anim-block {
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
+}
+.grad-1,
+.grad-2,
+.grad-3,
+.grad-4 {
+  position: absolute;
+  z-index: -1;
+  border-radius: 50%;
+  filter: blur(40px);
+}
+
+.grad-1 {
+  height: 80vw;
+  width: 80vw;
+  max-height: 900px;
+  max-width: 900px;
+  background-image: radial-gradient(
+    closest-side,
+    rgba(122, 28, 172, 10),
+    rgba(46, 7, 63, 0)
+  );
+  position: absolute;
+  top: -30vw;
+  left: 10vw;
+  z-index: -1;
+}
+
+.grad-2 {
+  height: 70vw;
+  width: 70vw;
+  max-height: 800px;
+  max-width: 800px;
+  background-image: radial-gradient(
+    closest-side,
+    rgba(122, 28, 172, 10),
+    rgba(46, 7, 63, 0)
+  );
+  position: absolute;
+  top: 40vw;
+  right: -30vw;
+  z-index: -1;
+}
+
+.grad-3 {
+  height: 60vw;
+  width: 60vw;
+  max-height: 700px;
+  max-width: 700px;
+  background-image: radial-gradient(
+    closest-side,
+    rgba(122, 28, 172, 10),
+    rgba(46, 7, 63, 0)
+  );
+  position: absolute;
+  top: 60vw;
+  left: -20vw;
+  z-index: -1;
+}
+
+.grad-4 {
+  height: 50vw;
+  width: 50vw;
+  max-height: 600px;
+  max-width: 600px;
+  background-image: radial-gradient(
+    closest-side,
+    rgba(122, 28, 172, 10),
+    rgba(46, 7, 63, 0)
+  );
+  position: absolute;
+  top: 120vw;
+  left: 15vw;
+  z-index: -1;
+}
+
+@media (max-width: 1024px) {
+  .grad-1 {
+    top: -20vw;
+    left: 5vw;
+  }
+  .grad-2 {
+    top: 35vw;
+    right: -20vw;
+  }
+  .grad-3 {
+    top: 55vw;
+    left: -15vw;
+  }
+  .grad-4 {
+    top: 110vw;
+    left: 10vw;
+  }
+}
+@media (max-width: 768px) {
+  .grad-1 {
+    height: 70vw;
+    width: 70vw;
+    top: -15vw;
+    left: 2vw;
+  }
+  .grad-2 {
+    height: 60vw;
+    width: 60vw;
+    top: 30vw;
+    right: -10vw;
+  }
+  .grad-3 {
+    height: 50vw;
+    width: 50vw;
+    top: 50vw;
+    left: -5vw;
+  }
+  .grad-4 {
+    height: 40vw;
+    width: 40vw;
+    top: 100vw;
+    left: 5vw;
+  }
+}
+@media (max-width: 480px) {
+  .grad-1,
+  .grad-2,
+  .grad-3,
+  .grad-4 {
+    height: 50vw;
+    width: 50vw;
+  }
+  .grad-1 {
+    top: -10vw;
+    left: 2vw;
+  }
+  .grad-2 {
+    top: 25vw;
+    right: -5vw;
+  }
+  .grad-3 {
+    top: 45vw;
+    left: -2vw;
+  }
+  .grad-4 {
+    top: 90vw;
+    left: 5vw;
+  }
+}
+.typo-head {
+  font-family: "Sour Gummy", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
+.typo {
+  font-family: "Sour Gummy", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
+.typo-1 {
+  font-family: "Yesteryear", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
